[M23] - refs #49 - solved the overflow x bug

--- a/css/custom/_global.scss
+++ b/css/custom/_global.scss
@@ -5,6 +5,9 @@ html {
   overflow-x: hidden;
 }
 
+.of-hidden {
+  overflow: hidden;
+}
 
 .glitch {
   position: relative;
